--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ h1, h2, h3, h4, h5 {
     border: 2px solid gold;;
 }
 
+.container {
+    max-width: 900px
+}
+
 #containerPrincipal {
     position: relative;
     top: 100px;
